Ajout d'un commande cmd fonctionnel